--- a/index.html
+++ b/index.html
@@ -1,22 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/style.css">
-</head>
-
-<body>
-    <!DOCTYPE html>
-    <html lang="en">
-
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="./style.css">
     </head>
 
     <body>
@@ -25,7 +14,7 @@
                 <div class="header-wrap">
                     <nav>
                         <ul class="menu flex">
-                            <li class="img"><img src="/images/logo.png" alt="img"></li>
+                            <li class="img"><img src="./images/logo.png" alt="img"></li>
                             <li><a href="#">ПРО НАС</a></li>
                             <li><a href="#">НАША КОМАНДА</a></li>
                             <li><a href="#">ПРОЄКТИ</a></li>
@@ -83,7 +72,7 @@
                         <hr class="hr">
                         <div class="info flex">
                             <div>
-                                <img src="/images/Rectangle 9.png" alt="img1">
+                                <img src="./images/Rectangle 9.png" alt="img1">
                                 <h2 class="h2_2">Lorem, ipsum dolor.</h2>
                                 <p class="p2_1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores,
                                     mollitia illum
@@ -92,7 +81,7 @@
                                     dignissimos ad incidunt nesciunt. Vero quidem deleniti sapiente.</p>
                             </div>
                             <div>
-                                <img src="/images/Rectangle 10.png" alt="img2">
+                                <img src="./images/Rectangle 10.png" alt="img2">
                                 <h2 class="h2_5">Lorem, ipsum.</h2>
                                 <p class="p2_1">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi voluptas
                                     numquam
@@ -101,7 +90,7 @@
                                     sequi voluptatem error. Nesciunt, eligendi molestias.</p>
                             </div>
                             <div>
-                                <img src="/images/Rectangle 11.png" alt="img3">
+                                <img src="./images/Rectangle 11.png" alt="img3">
                                 <h2 class="h2_2">Lorem, ipsum dolor.</h2>
                                 <p class="p2_1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem, rerum
                                     cum ipsam sit
@@ -110,7 +99,7 @@
                                     esse hic minus. Soluta.</p>
                             </div>
                             <div>
-                                <img src="/images/Rectangle 12.png" alt="img4">
+                                <img src="./images/Rectangle 12.png" alt="img4">
                                 <h2 class="h2_4">Lorem ipsum dolor sit.</h2>
                                 <p class="p2_1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem, rerum
                                     cum ipsam sit
@@ -149,7 +138,7 @@
                     <div class="sec_4-wrap">
                         <h2 class="h4_3">Чим ми можемо допомогти?</h2>
                         <div class="help">
-                            <img src="/images/Rectangle 15.png" alt="img9">
+                            <img src="./images/Rectangle 15.png" alt="img9">
                         </div>
                     </div>
                 </div>
@@ -161,7 +150,7 @@
                     </div>
                     <div class="sec_5-wrap">
                         <div class="animal flex">
-                            <img src="/images/Rectangle 16.png" alt="img10">
+                            <img src="./images/Rectangle 16.png" alt="img10">
                             <div class="div3">
                                 <h2 class="h5_1">ПОЛЯРНІ ВЕДМЕДІ</h2>
                                 <p class="p4_1">Більшість білих ведмедів живуть на морському льоду в Арктиці та навіть при невеликому
@@ -177,7 +166,7 @@
                             </div>
                         </div>
                         <div class="animal flex">
-                            <img src="/images/Rectangle 16 (1).png" alt="img11">
+                            <img src="./images/Rectangle 16 (1).png" alt="img11">
                             <div class="div3">
                                 <h2 class="h5_1">МОРСЬКІ ЧЕРЕПАХИ</h2>
                                 <p class="p4_2">Морські черепахи є ще одним вразливим видом, який стикається з кількома проблемами
@@ -192,7 +181,7 @@
                             </div>
                         </div>
                         <div class="animal flex">
-                            <img src="/images/Rectangle 16 (2).png" alt="img12">
+                            <img src="./images/Rectangle 16 (2).png" alt="img12">
                             <div class="div3">
                                 <h2 class="h5_1">ОРАНГУТАНГИ</h2>
                                 <p class="p4_3">Сучасні вчені вважають, що ще недавно на Землі було приблизно 230 000 диких
@@ -203,7 +192,7 @@
                             </div>
                         </div>
                         <div class="animal flex">
-                            <img src="/images/Rectangle 16 (3).png" alt="img13">
+                            <img src="./images/Rectangle 16 (3).png" alt="img13">
                             <div class="div3">
                                 <h2 class="h5_1">ТИГРИ</h2>
                                 <p class="p4_4">Популяція тигрів постійно скорочувалася протягом понад 100 років, але почала відскок
@@ -229,20 +218,20 @@
                         <div class="el6 flex">
                             <div class="el7 flex">
                                 <div class="el4 flex">
-                                    <img src="/images/Group 18.png" alt="img5" class="icon">
+                                    <img src="./images/Group 18.png" alt="img5" class="icon">
                                     <p class="p3_1">Поділіться</p>
                                 </div>
                                 <div class="el4 flex">
-                                    <img src="/images/Group 21.png" alt="img6" class="icon">
+                                    <img src="./images/Group 21.png" alt="img6" class="icon">
                                     <p class="p3_1">Твіт</p>
                                 </div>
                                 <div class="el4 flex">
-                                    <img src="/images/Group 22.png" alt="img7" class="icon">
+                                    <img src="./images/Group 22.png" alt="img7" class="icon">
                                     <p class="p3_3">Прикріпіть його</p>
                                 </div>
                             </div>
                             <div class="el5">
-                                <img src="/images/Group 23.png" alt="img8">
+                                <img src="./images/Group 23.png" alt="img8">
                             </div>
                         </div>
                         <div class="el3">
