--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                                 <label for="name"></label>
                                 <input type="text" id="name" name="name" placeholder="Введіть ім'я" required>
                             </div>
-                            <div class="btn"><a href="#">Пожертвуйте</a></div>
+                            <div class="btn"><a href="#" class="a">Пожертвуйте</a></div>
                         </div>
                     </div>
                 </div>
